Update 'by1ep4q4q-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-7eef7df3ff.0g4b.p3.openshiftapps.com/rhtap/rhtap-qe-go:4e10fb36133d5a3b735c567b321da4d120fe8f98@sha256:35b072c91398d5b5a0a7fcf4f041797d124d7fa0ac2cda245e696e50c447fe21

--- a/components/by1ep4q4q-go/overlays/development/deployment-patch.yaml
+++ b/components/by1ep4q4q-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: by1ep4q4q-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-7eef7df3ff.0g4b.p3.openshiftapps.com/rhtap/rhtap-qe-go:4e10fb36133d5a3b735c567b321da4d120fe8f98@sha256:35b072c91398d5b5a0a7fcf4f041797d124d7fa0ac2cda245e696e50c447fe21
+          name: container-image
